Redirection Message Change

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Redirecting...</title>
 </head>
 <body> 
-  If you are not redirected automatically, follow this <a href="32devs/build/index.html">link</a>.
+  If you are not redirected automatically, follow this... <a href="32devs/build/index.html">link</a>.
 </body>
 </html>
